--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ go:
     - 1.7
     - 1.8
 
+before_install:
+  - go get github.com/mattn/goveralls
+
 script:
  - go test -v ./...
+ - $HOME/gopath/bin/goveralls -service=travis-pro
