--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
 
 script:
  - go test -v ./...
- - $HOME/gopath/bin/goveralls -service=travis-pro
+ - $HOME/gopath/bin/goveralls -service=travis-ci
