--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ before_install:
 script:
  - go test -v ./...
  - $HOME/gopath/bin/goveralls -service=travis-ci
+ 
+ notifications:
+  email: false
