--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 script:
  - go test -v ./...
  - $HOME/gopath/bin/goveralls -service=travis-ci
- 
- notifications:
-  email: false
+notifications:
+  email:
+    on_success: never
+    on_failure: never
